# TinyEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
Tests/: Test.cpp  Test.h  TestClearColor.cpp  TestTexture2D.cpp  TestTexture2D.h
include/: IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBufferLayout.hpp  path_ultis.h
res/shaders/: Basic.frag  Basic.shader  Basic.vert  imgui.ini
src/: IndexBuffer.cpp  OpenGL_main.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  path_utils.cpp
src/Core/: IndexBuffer.cpp  IndexBuffer.h  Renderer.h  ResourceManager.cpp  ResourceManager.hpp  ResourceType.hpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h  imgui.ini
src/Platform/OpenGL/: OpenGLGraphics.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGLVertexLayout.cpp  OpenGLVertexLayout.h
src/Tests/: Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
src/Utils/: path_utils.cpp  path_utils.h
tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
